src/objects/DD_Master_Demo_Products__c.object
<CustomObject>
    <description>***Demo Depot application*** 
This will store all the serialized Parts and Accessories detail.</description>
    <fields>
        <fullName>Additional_information__c</fullName>
        <label>Additional Information</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Alternative_Part_Number__c</fullName>
        <label>Alternative Part Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Available_Quantity__c</fullName>
        <formula>Total_Quantity__c - (Reserved_Product_Quantity__c +  Write_Off_Quantity_NA__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Available Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bin__c</fullName>
        <label>Bin</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cost_Price__c</fullName>
        <label>Cost Price</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cycle__c</fullName>
        <label>Cycle</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>13</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>14</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>16</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>17</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>18</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>19</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>21</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>22</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>23</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>24</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>25</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>26</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>27</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>28</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>29</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>30</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DD_Demo_Pool__c</fullName>
        <label>Demo Pool</label>
        <referenceTo>DD_Demo_Pool__c</referenceTo>
        <relationshipLabel>Demo Pool Equipment</relationshipLabel>
        <relationshipName>Demo_Pool_Equipment</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Demand__c</fullName>
        <description>Total Number of register an interest for the product.</description>
        <label>Demand</label>
        <summaryForeignKey>DD_Backlog_Item__c.Material__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Demo_Master__c</fullName>
        <label>Demo Master</label>
        <picklist>
            <picklistValues>
                <fullName>EMEA</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Exclude_ReStock__c</fullName>
        <label>Exclude ReStock</label>
        <picklist>
            <picklistValues>
                <fullName>Y</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ExternalId__c</fullName>
        <externalId>true</externalId>
        <label>ExternalId</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Maximum_Units__c</fullName>
        <label>Maximum Units</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MinMaxFixed_Flag__c</fullName>
        <label>MinMaxFixed Flag</label>
        <picklist>
            <picklistValues>
                <fullName>Y</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>MinMaxManual_Date__c</fullName>
        <label>MinMaxManual Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MinMaxManual_Flag__c</fullName>
        <label>MinMaxManual Flag</label>
        <picklist>
            <picklistValues>
                <fullName>Y</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Minimum_Units__c</fullName>
        <label>Minimum Units</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Part_Name__c</fullName>
        <label>Part Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pool_Location__c</fullName>
        <label>Pool Location</label>
        <picklist>
            <picklistValues>
                <fullName>India</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Texas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brno</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>China</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brazil</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Germany</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>US</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ProductUniqueID__c</fullName>
        <externalId>true</externalId>
        <label>ProductUniqueID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Indicator__c</fullName>
        <formula>IMAGE(If(Available_Quantity__c=0, 
&quot;/resource/1446904840000/DD_Unavailable&quot;, 
&quot;/resource/1446904840000/DD_Available&quot;), 
&quot;Test&quot;,15,30

)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Indicator</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Location__c</fullName>
        <label>Product Location</label>
        <picklist>
            <picklistValues>
                <fullName>Prod Loc 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prod Loc 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prod Loc 3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prod Loc 4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prod Loc 5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prod Loc 6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prod Loc 7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prod Loc 8</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Product_Status__c</fullName>
        <label>Product Status</label>
        <picklist>
            <picklistValues>
                <fullName>Available</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Register an Interest</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Product_Type__c</fullName>
        <label>Product Type</label>
        <picklist>
            <picklistValues>
                <fullName>Serialized Product</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Accessory</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Reserved_Product_Quantity__c</fullName>
        <description>Contains total number of products reserved in all demo requests</description>
        <label>Reserved Quantity</label>
        <summaryFilterItems>
            <field>DD_Reserved_Product__c.Product_Status__c</field>
            <operation>notEqual</operation>
            <value>Returned</value>
        </summaryFilterItems>
        <summaryForeignKey>DD_Reserved_Product__c.Material__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Stock_Take_Date__c</fullName>
        <label>Stock Take Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Total_Quantity_Allocated__c</fullName>
        <label>Total Quantity Allocated</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Quantity_Bad__c</fullName>
        <label>Total Quantity Bad</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Quantity__c</fullName>
        <defaultValue>0</defaultValue>
        <description>This will store total quantity</description>
        <label>Total Quantity</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Used__c</fullName>
        <label>Used Qty.</label>
        <summaryForeignKey>DD_Reserved_Product__c.Material__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Write_Off_Quantity_NA__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Write Off Quantity NA</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Written_Off_Quantity__c</fullName>
        <label>Written Off Quantity</label>
        <summaryFilterItems>
            <field>DD_Reserved_Product__c.Product_Status__c</field>
            <operation>equals</operation>
            <value>Write Off</value>
        </summaryFilterItems>
        <summaryForeignKey>DD_Reserved_Product__c.Material__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Master Demo Product</label>
    <listViews>
        <fullName>Products_in_ALL_Demo_Pool</fullName>
        <columns>NAME</columns>
        <columns>DD_Demo_Pool__c</columns>
        <columns>Demo_Master__c</columns>
        <columns>Pool_Location__c</columns>
        <columns>Product_Type__c</columns>
        <columns>Demand__c</columns>
        <columns>Total_Quantity__c</columns>
        <columns>Available_Quantity__c</columns>
        <columns>Product_Indicator__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>Products in ALL Demo Pool</label>
    </listViews>
    <listViews>
        <fullName>Products_in_APAC_Demo_Pool</fullName>
        <columns>NAME</columns>
        <columns>DD_Demo_Pool__c</columns>
        <columns>Demo_Master__c</columns>
        <columns>Pool_Location__c</columns>
        <columns>Product_Type__c</columns>
        <columns>Demand__c</columns>
        <columns>Total_Quantity__c</columns>
        <columns>Available_Quantity__c</columns>
        <columns>Product_Indicator__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>DD_Demo_Pool__c</field>
            <operation>startsWith</operation>
            <value>APAC</value>
        </filters>
        <label>Products in APAC Demo Pool</label>
    </listViews>
    <listViews>
        <fullName>Products_in_EMEA_Demo_Pool</fullName>
        <columns>NAME</columns>
        <columns>DD_Demo_Pool__c</columns>
        <columns>Demo_Master__c</columns>
        <columns>Pool_Location__c</columns>
        <columns>Product_Type__c</columns>
        <columns>Demand__c</columns>
        <columns>Total_Quantity__c</columns>
        <columns>Available_Quantity__c</columns>
        <columns>Product_Indicator__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>DD_Demo_Pool__c</field>
            <operation>startsWith</operation>
            <value>EMEA</value>
        </filters>
        <label>Products in EMEA Demo Pool</label>
    </listViews>
    <listViews>
        <fullName>Products_in_LATAM_Demo_Pool</fullName>
        <columns>NAME</columns>
        <columns>DD_Demo_Pool__c</columns>
        <columns>Demo_Master__c</columns>
        <columns>Pool_Location__c</columns>
        <columns>Product_Type__c</columns>
        <columns>Demand__c</columns>
        <columns>Total_Quantity__c</columns>
        <columns>Available_Quantity__c</columns>
        <columns>Product_Indicator__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>DD_Demo_Pool__c</field>
            <operation>startsWith</operation>
            <value>LA</value>
        </filters>
        <label>Products in LATAM Demo Pool</label>
    </listViews>
    <listViews>
        <fullName>Products_in_NA_Demo_Pool</fullName>
        <columns>NAME</columns>
        <columns>DD_Demo_Pool__c</columns>
        <columns>Product_Type__c</columns>
        <columns>Demand__c</columns>
        <columns>Total_Quantity__c</columns>
        <columns>Available_Quantity__c</columns>
        <columns>Product_Indicator__c</columns>
        <columns>Bin__c</columns>
        <columns>Additional_information__c</columns>
        <columns>Description__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>DD_Demo_Pool__c</field>
            <operation>startsWith</operation>
            <value>NA</value>
        </filters>
        <label>Products in NA Demo Pool</label>
    </listViews>
    <nameField>
        <label>Material</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Product Information</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>